--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,13 +3,14 @@
     layout:decorate="~{layout}">
 
 <head>
-    <title>Dashboard</title>
+    <!-- <title>Dashboard</title> -->
+    <link rel="stylesheet" href="css/medicine.css">
 </head>
 
 <body>
     <main layout:fragment="content">
         <div class="page-header">
-            <h1>Dashboard</h1>
+            <h1>Trang chủ</h1>
             <small>Home / Dashboard</small>
         </div>
 
@@ -187,7 +188,7 @@
             </div>
         </div>
 
-        <script th:src="@{/js/dashboard.js}"></script>
+        <!-- <script th:src="@{/js/script.js}"></script> -->
     </main>
 
     
