--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -9,29 +9,29 @@
         <div class="side-menu">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="/">
                         <span class="las la-home"></span>
-                        <small>Dashboard</small>
+                        <small>Trang chủ</small>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="/medicines">
                         <span class="las la-user-alt"></span>
-                        <small>Lịch hẹn</small>
+                        <small>Thuốc</small>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="/services">
+                        <span class="las la-clipboard-list"></span>
+                        <small>Dịch vụ</small>
+                    </a>
+                </li>
+                <li>
+                    <a href="/patients">
                         <span class="las la-envelope"></span>
                         <small>Bệnh nhân</small>
                     </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="las la-clipboard-list"></span>
-                        <small>Ca trực</small>
-                    </a>
-                </li>
+                </li>               
                 <li>
                     <a href="">
                         <span class="las la-shopping-cart"></span>
