--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -33,15 +33,15 @@
                     </a>
                 </li>               
                 <li>
-                    <a href="">
+                    <a href="/slots">
                         <span class="las la-shopping-cart"></span>
-                        <small>Hóa đơn</small>
+                        <small>Thời gian làm việc</small>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="/users">
                         <span class="las la-tasks"></span>
-                        <small>Nhân viên</small>
+                        <small>Người dùng</small>
                     </a>
                 </li>
             </ul>
