--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -44,6 +44,18 @@
                         <small>Người dùng</small>
                     </a>
                 </li>
+                <li>
+                    <a href="/appointments">
+                        <span class="las la-tasks"></span>
+                        <small>Lịch hẹn</small>
+                    </a>
+                </li>
+                <li>
+                    <a href="/invoices">
+                        <span class="las la-tasks"></span>
+                        <small>Hóa đơn</small>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
